--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
 				<section id="banner">
 					<div class="container" >
 						<FONT size="2pt"><i>
-							<p>"We are happy with your quality and excellent work.</p>
-							<p>N.Crawford, Washington.</p>
-							<p><br>"Our team could not be more satisfied with your work." </p>
-							<p>S. Green, Los Angeles.</p>
-							<p><br>"My team were very impressed."</p>
-							<p>K. Smith, London.</p>
+							<p>"We are happy with your quality and excellent work.<br>
+							N.Crawford, Washington.<br>
+							<br>	
+							"Our team could not be more satisfied with your work."<br>
+							S. Green, Los Angeles.<br>
+							<br>	
+							"My team were very impressed."<br>
+							K. Smith, London.</p>
 						</i></FONT>
 					</div>
         				
