--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><a href="#" class="button icon solid fa-file">Tell Me More</a></li>
+									<li><a href="https://alptra.github.io/right-sidebar.html" class="button icon solid fa-file">Tell Me More</a></li>
 								</ul>
 							</div>
 						</div>
@@ -164,7 +164,7 @@
 										<article class="box post">
 											<h3>Every project is special.</h3>
 											<ul class="actions">
-												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
+												<li><a href="https://alptra.github.io/right-sidebar.html" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
 										</article>
 									<!-- Post -->
