--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 										<article class="box post">
 											<h3>Every project is special.</h3>
 											<ul class="actions">
-												<li><a href="https://alptra.github.io/right-sidebar.html" class="button icon solid fa-file">Continue Reading</a></li>
+												<li><a href="https://alptra.github.io/right-sidebar.html" class="button icon solid fa-book">Continue Reading</a></li>
 											</ul>
 										</article>
 									<!-- Post -->
