--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#"><strong>Audiovisual translation</strong><br />
+												<h2><a href="#"><strong><h3>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</strong><br />
 												</a></h2>
-												<h3>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</h3>
+												<h3>Audiovisual translation</h3>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
 											<p><strong>My inspiration</strong>
