--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#"><strong><h3>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</strong><br />
+												<h2><a href="#"><strong>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</strong><br />
 												</a></h2>
 												<h3>Audiovisual translation</h3>
 											</header>
