--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 																<h3><a href="#">Transcription</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
-															<p>Get your audio files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
+															<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 														</article>
 
 												</li>
