--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 											<header>
 												<h2><a href="#"><strong>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</strong><br />
 												</a></h2>
-												<h3>Audiovisual translation</h3>
+												<h3><a href="#">Audiovisual translation</a></h3>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
 											<p><strong>My inspiration</strong>
