--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<section id="banner">
 					<div class="container" >
 						<FONT size="2pt"><i>
-							<p>"We are happy with your quality and excellent work.</p>
+							<p>"We are happy with your quality and excellent work."</p>
 							<p>N.Crawford, Washington.</p>
 							<p><br>"Our team could not be more satisfied with your work." </p>
 							<p>S. Green, Los Angeles.</p>
