--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -48,7 +48,7 @@
 											</header>
 											<span class="image featured"><img src="images/pic08.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3></h3>
-											<p>The job of localization is to give a product the look and feel of having been created specifically for a target population, in respect of their language, culture, or location.</p>
+											<p>The job of localization is to give a product the look and feel of having been created specifically for a target population, whatever their language, culture, or location.</p>
 											<h3></h3>
 											<p></p>
 										</article>
