--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -60,7 +60,7 @@
 											</header>
 											<span class="image featured"><img src="images/pic09.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3></h3>
-											<p>Style guides are materials that tend to change the least often. That being said, because style guides contain key guidelines that influence every part of the translation, it's very important to get them right. A good style guide will not just talk about how to handle things that exist in the English language. It's going to contain sections that deal with recommended style for handling grammatical categories and sentence structures that do not have any equivalent in the source language. One example would be how to handle verb tenses and verb forms.
+											<p>Style guides are materials that tend to change the least often. That being said, because a style guide contains key guidelines that influence every part of the translation, it will not just talk about how to handle things that exist in the English language. It's going to contain sections that deal with recommended style for handling grammatical categories and sentence structures that do not have any equivalent in the source language. One example would be how to handle verb tenses and verb forms.
 											The other area where a good style guide sets itself apart is in adapting the tone and style to the target market. For example, German audience will have a different perception of how much informal is too informal then, for example, people in Italy. A tweak in tone to achieve a similar communicative effect is often a good idea, even when adapting just within one language such as between American English and English for UK.</p>
 											<h3></h3>
 											<p></p>
