--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<nav id="nav">
 								<ul>
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
-									<li><a class="icon solid fa-file" href="right-sidebar.html"><span>Journal</span></a></li>
+									<li><a class="icon solid fa-coffee" href="right-sidebar.html"><span>Cafe</span></a></li>
 								</ul>
 							</nav>
 
