--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -47,7 +47,7 @@
 												<h2>Behold! This is <strong>Alptra</strong>!</h2>
 											</header>
 											<span class="image featured"><img src="images/pic08.jpg" alt="" style="border-radius: 2%"/></span>
-											<h3>Constraints or Fun?</h3>
+											<h3>Constraints are Fun? Constraints are fun!</h3>
 											<p>The job of localization is to give a product the look and feel of having been created specifically for a target population, whatever their language, culture, or location. Translation is just a piece of the overall localization workflow. For localized products, we translators work on very different types of content and different file types, such as image files, audio files, video files, software resource files, XML files, and HTML files. And we work for different clients with very different expectations. Audio obviously has to be recorded in each target language if it is supposed to be localized. The challenge here is how to translate the script for the audio. Text that is going to be read out loud needs to have a high degree of fluidity. Tongue-twisters have no place in a script for video voiceover. Super long sentences aren't a good fit for a localized podcast. Often, there is also the challenge of timing, since a lot of audio is actually used with video. The voiceover has to match the shown content. In the movie, a voice talent for the target language cannot speak longer than the person shown. Similar timing considerations apply for subtitles. In this case, it is the amount of time needed for reading the shown text that constrains how long it can be. French needs more words than the English language to convey the same meaning. It's not easy, but it is definitely fun!</p>
 											<h3></h3>
 											<p></p>
@@ -81,7 +81,7 @@
 																<span class="date">July 30</span>
 																<h3><a href="#">Just another post</a></h3>
 															</header>
-															<p></p>
+															<p>Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. Let's go back to when we began asking computers to help us communicate. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russia into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
 														</article>
 
 												</li>
