--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -78,8 +78,8 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<span class="date">Just another post</span>
+																<h3><a href="#"></a></h3>
 															</header>
 															<p>Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. Let's go back to when we began asking computers to help us communicate. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russia into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
 														</article>
@@ -90,8 +90,8 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
+																<span class="date">And another post</span>
+																<h3><a href="#"></a></h3>
 															</header>
 															<p></p>
 														</article>
@@ -102,8 +102,8 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
+																<span class="date">One more post</span>
+																<h3><a href="#"></a></h3>
 															</header>
 															<p></p>
 														</article>
