--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -93,7 +93,8 @@
 																<span class="date">And another post</span>
 																<h3><a href="#"></a></h3>
 															</header>
-															<p></p>
+															<a href="#" class="image left"><img src="images/photo.jpg" alt=""/></a>
+															<p>Tony is an experienced translator, and proofreader. He takes pride in being reliable and trustworthy, and in providing people with qualitative authentic contents. In his free time you might find him hiking the Mont Blanc, reading Émile Zola or exploring great museums (it's important for this job :).</p>
 														</article>
 
 												</li>
