--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -109,13 +109,15 @@
 														</article>
 
 												</li>
+												<li>
+
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
 																<span class="date"></span>
 																<h3><a href="#"></a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/Photo.png" alt=""></a>
+															<a href="#" class="image left"><img src="images/Photo.png" alt=""/></a>
 															<p><i>Tony Foucart is the founder of Alptra. He is an experienced translator, and proofreader. He takes pride in being reliable and trustworthy, and in providing people with qualitative authentic contents. In his free time you might find him hiking the Mont Blanc, reading Émile Zola or exploring great museums (it's important for this job :).</i></p>
 														</article>
 
