--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -104,7 +104,7 @@
 															<header>
 																<h3><a href="#">About</a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/Photo.png" alt=""style="width:60%"/></a>
+															<a href="#" class="image left"><img src="images/Photo.png" alt=" style="border-radius: 2% width:75%"/></a>
 															<p><i>Tony Foucart is the founder of Alptra. He is a freelance translator, and proofreader. He has worked on a broad range of projects, from newspaper articles to classic Disney animations and movies subtitles. He takes pride in being reliable and trustworthy, and in providing his clients with qualitative authentic contents. In his free time you might find him hiking the Mont Blanc, reading Émile Zola or exploring great museums.</i></p>
 														</article>
 
