--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -59,7 +59,7 @@
 												<h2>Post production and the film, television and streaming industry.</h2>
 											</header>
 											<span class="image featured"><img src="images/pic09.jpg" alt="" style="border-radius: 2%"/></span>
-											<h3></h3>
+											<h3>The golden rules</h3>
 											<p>We translators must follow style guides, so that you can watch your favorite shows with subtitles translated (with accuracy hopefully) in the language of your choice. Style guides are materials that tend to change the least often. That being said, because a style guide contains key guidelines that influence every part of the translation, it will not just talk about how to handle things that exist in the English language. It's going to contain sections that deal with recommended style for handling grammatical categories and sentence structures that do not have any equivalent in the source language. One example would be how to handle verb tenses and verb forms. It will also help the translator in adapting the tone and style to the target market. For example, French audience will have a different perception of how much informal is too informal then, for example, people in Italy. The English language is more polite, French is more direct. A tweak in tone to achieve a similar communicative effect is often a good idea, even when adapting just within one language such as between American English and English for UK. Being too literal can destroy the meaning, being too adaptive can also destroy the meaning. It is a fine line between the two. What I've written just scratches the surface. What other points can you add to this list that I may have not mentioned?</p>
 											<h3></h3>
 											<p></p>
