--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -79,7 +79,7 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">Just another post</span>
-																<h3><a href="#">Machine Translation</a></h3>
+																<h3><a href="#">A bit of history</a></h3>
 															</header>
 															<p>Considering mankind's ability to develop cars that can drive without human interaction and computers that win chess games against the best human players, one would think we'd be able to solve the problem of a universal communication for ourselves. Language is one of the most essential parts of our heritage and culture. Translation with the help of machines seems to be the most obvious and desirable way to achieve this. So we began asking computers to help us communicate. But even now, with computers that can perform an exaFLOP-- which is a billion, billion operations per second-- we haven't reached the goal of a universal communication solution. When talking about machine translation, the earliest example that is always mentioned is the attempt to translate Russian into English during the Cold War. In 1954, IBM and Georgetown University succeeded in machine translating more than 60 sentences with only 6 grammar rules and 250 lexical items in the computer's vocabulary. After some time, the first rules-based machine translation engine, or RbMT engine, was developed in the early 1970s.</p>
 														</article>
