--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -44,6 +44,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
+												<input type="color" value="#0B8484">
 												<h2>Behold! This is <strong>Alptra</strong>!</h2>
 											</header>
 											<span class="image featured"><img src="images/pic08.jpg" alt="" style="border-radius: 2%"/></span>
