--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -44,8 +44,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2>Behold! This is <strong>Alptra</strong>!</h2>
-												<h2>FONT COLOR="0B8484"</h2>
+												<h2><FONT COLOR="#0B8484">Behold! This is <strong>Alptra</strong>!</FONT></h2>
 											</header>
 											<span class="image featured"><img src="images/pic08.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>Constraints are fun?</h3>
