--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -56,7 +56,7 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2>Post production and the film, television and streaming industry.</h2>
+												<h2><FONT COLOR="#0B8484">Post production and the film, television and streaming industry.</FONT></h2>
 											</header>
 											<span class="image featured"><img src="images/pic09.jpg" alt="" style="border-radius: 2%"/></span>
 											<h3>The golden rules</h3>
