--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -91,9 +91,9 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">And another post</span>
-																<h3><a href="#"></a></h3>
+																<h3><a href="#">A few reminders</a></h3>
 															</header>
-															<p></p>
+															<p>An anagram is a word or phrase made by using the letters of another word or phrase in a different order: Poires - proies. Verre - rêver. Café - face. Migraine - imaginer.  « Aimante araignée, ogre illogique, est là Aimant à régner au gris logis qu'elle a » (Victor Hugo) « Dans ces bois automnaux, graves et romantiques Danse et bois aux tonneaux, graves et rhum antique » (Prévert) « Au Café de la Paix, grand-père, il se fait tard Oh ! qu'a fait de la pègre en péril ce fêtard ? » Throughout his career as a burglar, Maurice Leblanc's gentleman Arsène Lupin used a few anagrams: Paule Sinner, Prince Paul Sernine, Don Luis Perenna... In the movie Silence of the lambs “Esther Moffett,” is an anagram for « the rest of me », and in the French version Faust Federel is an anagram for « sulfate de fer ». A pangram is a sentence that contains every letter of the alphabet, if possible with each letter only being used once: « Portez ce vieux whisky au juge blond qui fume » A tautogram (coming from tauto gramma, "same letter") is a text in which all words start with the same letter : « Ton tonton tond ton toutou ». Synaeresis describes a phonological process of sound change in which two adjacent vowels within a word are combined into a single syllable. It is a common process in French. Guillaume Appolinaire, Alcools, « La Chanson du mal-aimé » Juin ton soleil ardente lyre Brûle mes doigts endoloris Holorime is a form of rhyme where two very similar sequences of sounds can form phrases composed of different words and with different meanings. « Par les bois du Djinn, où s'entasse de l'effroi, Parle et bois du gin !… ou cent tasses de lait froid. »  Alphonse Allais « Dans ces bois automnaux, graves et romantiques, Danse et bois aux tonneaux, graves et rhums antiques » Jacques Prévert « Et ma blême araignée, ogre illogique et las Aimable, aime à régner, au gris logis qu’elle a » Victor Hugo A pun  is a humorous use of a word or phrase that has several meanings or that sounds like another word It is admitted that the word « calembour » in french was first used by Denis Diderot who was the first to use this word in a letter to Sophie Volland dated 1 October 1768. « De deux choses lune, l’autre c’est le soleil » - Jacques Prévert. Other oddities The masculine nouns « scarabée » and macchabée » end with « ée » Some words only exist in plural form « les ténèbres », « les funérailles », « coordonnées »</p>
 														</article>
 
 												</li>
@@ -105,6 +105,30 @@
 																<h3><a href="#">About</a></h3>
 															</header>
 															<p><i>Tony Foucart is the founder of Alptra. He is a freelance translator, and proofreader. He has worked on a broad range of projects, from newspaper articles to classic Disney animations and movies subtitles. He takes pride in being reliable and trustworthy, and in providing his clients with qualitative authentic contents. In his free time you might find him hiking the Mont Blanc, reading Émile Zola or exploring great museums.</i></p>
+														</article>
+
+												</li>
+												<li>
+
+													<!-- Excerpt -->
+														<article class="box excerpt">
+															<header>
+																<span class="date">Interesting</span>
+																<h3><a href="#">History again</a></h3>
+															</header>
+															<p>Eugène-René Poubelle (15 April 1831 – 15 July 1907) was a French lawyer and diplomat who introduced waste containers to Paris and made their use compulsory. This introduction was so innovative at the time that Poubelle's surname became synonymous with waste bins (la poubelle) and remains the most common French word for a bin. Eugène Poubelle also campaigned successfully for direct drainage. A resurgence of cholera in 1892 led to his decreeing in 1894 that all buildings were to be connected direct to the sewers at the expense of the building's owner.</p>
+														</article>
+
+												</li>
+												<li>
+
+													<!-- Excerpt -->
+														<article class="box excerpt">
+															<header>
+																<span class="date">Can you solve this?</span>
+																<h3><a href="#">Mystery</a></h3>
+															</header>
+															<p>Un soir d’été, un roi fût décapité. Trois moines eurent la tête tranchée. Le lendemain, on ne retrouva qu’un seul corps. Pourquoi ?</p>
 														</article>
 
 												</li>
