--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<script type='text/javascript'>
+		// <![CDATA[
+		function nodroit()
+		{
+		alert(‘Copier/coller interdit !');
+		return(false);
+		}
+		document.oncontextmenu = nodroit;
+		// ]]>
+		</script>
 	<head>
 		<title>Alptra</title>
 		<meta charset="utf-8" />
