--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -102,8 +102,8 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">Interesting</span>
-																<h3><a href="#">History again</a></h3>
+																<span class="date">Food for Thought</span>
+																<h3><a href="#"></a></h3>
 															</header>
 															<p>Eugène-René Poubelle (15 April 1831 – 15 July 1907) was a French lawyer and diplomat who introduced waste containers to Paris and made their use compulsory. This introduction was so innovative at the time that Poubelle's surname became synonymous with waste bins (la poubelle) and remains the most common French word for a bin. Eugène Poubelle also campaigned successfully for direct drainage. A resurgence of cholera in 1892 led to his decreeing in 1894 that all buildings were to be connected direct to the sewers at the expense of the building's owner.</p>
 														</article>
