--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -114,7 +114,7 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">Can you solve this?</span>
+																<span class="date">Can you solve this mystery?</span>
 																<h3><a href="#"></a></h3>
 															</header>
 															<p>Un soir d’été, un roi fût décapité. Trois moines eurent la tête tranchée. Le lendemain, on ne retrouva qu’un seul corps. Pourquoi ?</p>
