--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -65,6 +65,17 @@
 											<p></p>
 										</article>
 									
+									<!-- Post -->
+										<article class="box post">
+											<header>
+												<h2><FONT COLOR="#0B8484"><FONT></h2>
+											</header>
+											<span class="image featured"><img src="images/" alt="" style="border-radius: 2%"/></span>
+											<h3></h3>
+											<p></p>
+											<h3></h3>
+											<p></p>
+										</article>
 								</div>
 
 							<!-- Sidebar -->
