--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -65,18 +65,6 @@
 											<p></p>
 										</article>
 									
-									<!-- Post -->
-										<article class="box post">
-											<header>
-												<h2><FONT COLOR="#0B8484">About</FONT></h2>
-											</header>
-											<span class="image featured"><img src="" alt="" style="border-radius: 2%"/></span>
-											<h3>About</h3>
-											<p><i>Tony Foucart is the founder of Alptra. He is a freelance translator, and proofreader. He has worked on a broad range of projects, from newspaper articles to classic Disney animations and movies subtitles. He takes pride in being reliable and trustworthy, and in providing his clients with qualitative authentic contents. In his free time you might find him hiking the Mont Blanc, reading Émile Zola or exploring great museums.</i></p>
-											<h3></h3>
-											<p></p>
-										</article>
-									
 								</div>
 
 							<!-- Sidebar -->
@@ -114,7 +102,7 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">Something to chew on</span>
+																<span class="date">Somthing to chew on</span>
 																<h3><a href="#"></a></h3>
 															</header>
 															<p>Eugène Poubelle (15 April 1831 – 15 July 1907) was born to a bourgeois family in Caen. He studied to become a lawyer and obtained a PhD. He introduced waste containers to Paris and made their use compulsory. This introduction was so innovative at the time that Poubelle's surname became synonymous with waste bins and remains the most common French word for a bin. He became Préfet of the Seine département. On 7 March 1884 Poubelle decreed that owners of buildings must provide their residents with three covered containers of 40 to 120 litres to hold household refuse. The refuse was to be sorted into compostable items, paper and cloth, and crockery and shells. The population of Paris, close to two million, needed a system to empty the containers regularly. Parisians began to name their boxes after Poubelle, a habit encouraged by the newspaper <i>Le Figaro</i>, which called them Boîtes Poubelle. Eugène Poubelle also campaigned successfully for direct drainage. A resurgence of cholera in 1892 led to his decreeing in 1894 that all buildings were to be connected direct to the sewers at the expense of the building's owner.</p>
