--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
 -->
 <html>
 	<head>
+		const threshold = .1
+		const options = {
+  			root: null,
+  			rootMargin: '0px',
+  			threshold
+		}
+
+		const handleIntersect = function (entries, observer) {
+ 			entries.forEach(function (entry) {
+    				if (entry.intersectionRatio > threshold) {
+      					entry.target.classList.remove('reveal')
+      						observer.unobserve(entry.target)
+    				}
+ 			 })
+		}
+
+		document.documentElement.classList.add('reveal-loaded')
+
+		window.addEventListener("DOMContentLoaded", function () {
+  			const observer = new IntersectionObserver(handleIntersect, options)
+  			const targets = document.querySelectorAll('.reveal')
+  			targets.forEach(function (target) {
+   				observer.observe(target)
+ 			 })
+		})
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
