--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
+							<div class="type">
 							<p class="lowercase">Translating more than words</p>
+							</div>
+
 
 						<!-- Nav -->
 							<nav id="nav">
