--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p class="lowercase">Translating more than words</p>
+							<div class="container">
+								<div class="typed-out">Translating more than words</div>
+							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
