--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<div class="container">
-								<div class="typed-out">Translating more than words</div>
+							<p>Translating more than words</p>
 							</div>
 
 						<!-- Nav -->
@@ -58,7 +57,9 @@
 				<section id="features">
 					<div class="container">
 						<header>
+							<div class="typed-out">
 							<h2><strong>Translation Services</strong></h2>
+							</div>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
