--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -40,7 +40,9 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
+							<div class="typewriter no-caret">
 							<p>Translating more than words</p>
+							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
