--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -40,7 +40,11 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p>Translating more than words</p>
+							<div class="wrapper">
+   		 						<div class="typing-demo">
+									<p>Translating more than words</p>
+	    							</div>
+							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
