--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p>Translating more than words</p>
+							<div class="wrapper">
+    								<div class="typing-demo">
+									<p>Translating more than words</p>
+								</div>
+							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
