--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p><span class="type"><span>Translating more than words</span></span></p>
+							<p>Translating more than words</p>
 
 						<!-- Nav -->
 							<nav id="nav">
