--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p>Translating more than words</p>
+							<body>
+        						<div id="typing-text"></div>
+    							</body>
 
 						<!-- Nav -->
 							<nav id="nav">
