--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
 					<div class="container">
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							 <head>
-        						<link rel="stylesheet" href="style.css">
-    							</head>
-							<body>
-        						<div id="typing-text"></div>
-    							</body>
+							<p>Translating more than words</p>
 
 						<!-- Nav -->
 							<nav id="nav">
