--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p>Translating more than words</p>
-							<h1 class="ml3">Translating more than words</h1>
+							<p class="ml3">Translating more than words</p>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
