--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -40,7 +40,9 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p>Translating more than words</p>
+							<p class="ml3">Translating more than words</p>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 									
 						<!-- Nav -->
 							<nav id="nav">
