--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -40,7 +40,11 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
-							<p class="ml3">Translating more than words</p>
+							<p class="ml6">
+  								<span class="text-wrapper">
+    									<span class="letters">Beautiful Questions</span>
+  								</span>
+							</p>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 									
