--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="ml6">
   								<span class="text-wrapper">
-    									<span class="letters">Beautiful Questions</span>
+    									<span class="letters">Translating more than words</span>
   								</span>
 							</p>
 
