--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
-							<div class="top"><div class="title"><h1 id="logo"><a href="index.html">Alptra</a></h1></div>
-							</div>
+							<h1 id="logo"><a href="index.html">Alptra</a></h1>
 							<p class="ml6">
   								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
@@ -63,7 +62,8 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2><strong>Translation Services</strong></h2>
+							<div class="top"><div class="title"><h2><strong>Translation Services</strong></h2></div>
+							</div>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
