--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 								<!-- Feature -->
 									<section>
 										<div class="container">
-  										<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
+  											<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
+											</div>
 										</div>
 										<header>
 											<h3>French language specialist</h3>
@@ -83,7 +84,10 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
+										<div class="container">
+											<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
+											</div>
+										</div>
 										<header>
 											<h3>Translation</h3>
 										</header>
@@ -95,7 +99,10 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
+										<div class="container">
+											<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
+											</div>
+										</div>
 										<header>
 											<h3>Proofreading</h3>
 										</header>
@@ -144,7 +151,10 @@
 												</a></h2>
 												<h3><a href="#">Audiovisual translation</a></h3>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
+											<div class="container">
+												<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
+												</div>
+											</div>
 											<p><strong>My inspiration</strong>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
@@ -164,7 +174,10 @@
 															<header>
 																<h3><a href="#">Voice over</a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
+															<div class="container">
+																<div class="appear" data-delai="0"><a href="#" class="image left"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
+																</div>
+															</div>
 															<p>Record your production in French. We help make your project sound great. </p>
 														</article>
 
@@ -176,7 +189,10 @@
 															<header>
 																<h3><a href="#">Transcription</a></h3>
 															</header>
-															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
+															<div class="container">
+																<div class="appear" data-delai="0"><a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
+																</div>
+															</div>
 															<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 														</article>
 
@@ -200,7 +216,10 @@
 											<header>
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
+											<div class="container">
+												<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
+												</div>
+											</div>
 											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
 											<p></p>
 										</article>
