--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="container">
-  											<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
-											</div>
-										</div>
+  										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<header>
 											<h3>French language specialist</h3>
 										</header>
@@ -84,10 +81,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="container">
-											<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
-											</div>
-										</div>
+										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<header>
 											<h3>Translation</h3>
 										</header>
@@ -99,10 +93,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="container">
-											<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
-											</div>
-										</div>
+										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<header>
 											<h3>Proofreading</h3>
 										</header>
@@ -151,10 +142,7 @@
 												</a></h2>
 												<h3><a href="#">Audiovisual translation</a></h3>
 											</header>
-											<div class="container">
-												<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
-												</div>
-											</div>
+											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
 											<p><strong>My inspiration</strong>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
@@ -174,10 +162,7 @@
 															<header>
 																<h3><a href="#">Voice over</a></h3>
 															</header>
-															<div class="container">
-																<div class="appear" data-delai="0"><a href="#" class="image left"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
-																</div>
-															</div>
+															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
 															<p>Record your production in French. We help make your project sound great. </p>
 														</article>
 
@@ -189,10 +174,7 @@
 															<header>
 																<h3><a href="#">Transcription</a></h3>
 															</header>
-															<div class="container">
-																<div class="appear" data-delai="0"><a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
-																</div>
-															</div>
+															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
 															<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 														</article>
 
@@ -216,10 +198,7 @@
 											<header>
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
-											<div class="container">
-												<div class="appear" data-delai="0"><a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
-												</div>
-											</div>
+											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
 											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
 											<p></p>
 										</article>
