--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 								<!-- Feature -->
 									<section>
-  										<div class="fade"><a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a></div>
+  										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<header>
 											<h3>French language specialist</h3>
 										</header>
