--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Alptra</a></h1>
+							<div class="top">
+								<div class="title">
+								<h1 id="logo"><a href="index.html">Alptra</a></h1>
+								</div>
+							</div>
 							<p class="ml6">
   								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
