--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
 				<section id="header">
 					<div class="container">
 						<!-- Logo -->
-							<div class="top">
-								<div class="title">
-								<h1 id="logo"><a href="index.html">Alptra</a></h1>
-								</div>
-							</div>
+							<header id="header" class="page-header">
+							<h1 id="logo"><a href="index.html">Alptra</a></h1>
+							</header>
 							<p class="ml6">
   								<span class="text-wrapper">
     									<span class="letters">Translating more than words</span>
