--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="top">
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
+										</div>
 										<header>
 											<h3>French language specialist</h3>
 										</header>
