--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="top">
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<header>
 											<h3>Translation</h3>
 										</header>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
+										</div>
 									</section>
 
 							</div>
@@ -95,11 +97,13 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="top">
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="glasses" height= "239.7" style="border-radius: 2%"/></a>
 										<header>
 											<h3>Proofreading</h3>
 										</header>
 										<p>Proofreading services include reading and reviewing your documents for spelling, grammar, accuracy and clarity. They should be checked and rechecked.</p>
+										</div>
 									</section>
 
 							</div>
