--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="reveal">
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
 										<header>
 											<h3>French language specialist</h3>
 										</header>
 										<p>My name is Tony Foucart, I am a french native professional translator. After studying French Law at University of Mont Blanc, I studied the structure and composition of English language, creative writing and old literature, in UK and USA.</p>
+										</div>
 									</section>
 
 							</div>
@@ -83,11 +85,13 @@
 
 								<!-- Feature -->
 									<section>
+										<div class="reveal">
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="words" style="border-radius: 2%"/></a>
 										<header>
 											<h3>Translation</h3>
 										</header>
 										<p>I offer translation services from English into French, in the fields of French law, literature, industry, and entertainment. All documents will remain strictly confidential.</p>
+										</div>
 									</section>
 
 							</div>
