--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 			<!-- Features -->
 				<section id="features">
+					<div class="js-show-on-scroll">
 					<div class="container">
 						<header>
 							<h2><strong>Translation Services</strong></h2>
@@ -103,6 +104,7 @@
 									</section>
 
 							</div>
+					</div>
 							<div class="col-12">
 								<ul class="actions">
 									<li><a href="https://alptra.github.io/right-sidebar.html" class="button">Tell Me More</a></li>
