--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 									<section>
 										<div class="js-show-on-scroll">
   										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="pen" style="border-radius: 2%"/></a>
+										</div>
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>French language specialist</h3>
 										</header>
