--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						</div>
 					</div>
 					<div class="conteneur">
-					<iframe class="responsive-iframe" src="images/VideoAlptra.mp4" frameborder="0" autoplay="0"></iframe> 
+					<iframe class="responsive-iframe" src="images/VideoAlptra.mp4" frameborder="0" &autoplay=0></iframe> 
 					</div>
 				</section>
 			<!-- Banner -->
@@ -162,11 +162,9 @@
 												<h3><a href="#">Audiovisual translation</a></h3>
 												</div>
 											</header>
-											<div class="js-show-on-scroll">
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" style="border-radius: 2%"/></a>
-											<p><strong>My inspiration</strong>
-											</div>
 											<div class="js-show-on-scroll">
+											<p><strong>My inspiration</strong>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
 											</div>
@@ -188,9 +186,7 @@
 																<h3><a href="#">Voice over</a></h3>
 																</div>
 															</header>
-															<div class="js-show-on-scroll">
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
-															</div>
 															<div class="js-show-on-scroll">
 															<p>Record your production in French. We help make your project sound great.</p>
 															</div>	
@@ -206,9 +202,7 @@
 																<h3><a href="#">Transcription</a></h3>
 																</div>
 															</header>
-															<div class="js-show-on-scroll">
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
-															</div>
 															<div class="js-show-on-scroll">
 															<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
 															</div>
@@ -234,15 +228,13 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<div class="js-show-on-scroll">
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
-												</div>
 											</header>
-											<div class="js-show-on-scroll">
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
+											<div class="js-show-on-scroll">
 											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
-											</div>
 											<p></p>
+											</div>
 										</article>
 								</div>									
 						</div>
