--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
+												<div class="js-show-on-scroll">
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
+												</div>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
 											<div class="js-show-on-scroll">
