--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</div>
 					</div>
 					<div class="conteneur">
-					<iframe class="responsive-iframe" src="images/VideoAlptra.mp4" frameborder="0" &autoplay=0></iframe> 
+					<iframe class="responsive-iframe" src="images/VideoAlptra.mp4" autoplay="0" frameborder="0"></iframe> 
 					</div>
 				</section>
 			<!-- Banner -->
