--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 
 									<!-- Post -->
 										<article class="box post">
+											<div class="js-show-on-scroll">
 											<header>
 												<h2><a href="#"><strong>Alptra offers a variety of options for broadcast, home entertainment and streaming release.</strong><br />
 												</a></h2>
@@ -159,6 +160,7 @@
 											<p><strong>My inspiration</strong>
 											<p>As far as I can remember, when watching TV or a movie with my sister, we would always turn on the subtitles because of her hearing issue. Subtitles became important to me, I love translating them and making sure they are perfect.
 											It has helped me to understand my purpose and I can work where I’m at my most creative and productive, while preserving precision and attention to detail. My job is to create magic and awaken emotions!</p>
+											</div>
 										</article>
 								</div>
 
