--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
 
 									<!-- Post -->
 										<article class="box post">
+											<div class="js-show-on-scroll">
 											<h3>Every project is special.</h3>
+											</div>
 											<ul class="actions">
 												<li><a href="https://alptra.github.io/right-sidebar.html" class="button">Continue Reading</a></li>
 											</ul>
