--- a/index.html
+++ b/index.html
@@ -174,11 +174,13 @@
 
 													<!-- Highlight -->
 														<article class="box highlight">
+															<div class="js-show-on-scroll">
 															<header>
 																<h3><a href="#">Voice over</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" style="border-radius: 2%"/></a>
-															<p>Record your production in French. We help make your project sound great.</p>	
+															<p>Record your production in French. We help make your project sound great.</p>
+															</div>
 														</article>
 
 												</li>
@@ -186,11 +188,13 @@
 
 													<!-- Highlight -->
 														<article class="box highlight">
+															<div class="js-show-on-scroll">
 															<header>
 																<h3><a href="#">Transcription</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" style="border-radius: 2%"/></a>
 															<p>Get your audio and video files in French transcribed, whether it's a podcast, lecture, or meeting.</p>
+															</div>
 														</article>
 
 												</li>
