--- a/index.html
+++ b/index.html
@@ -216,12 +216,14 @@
 										</article>
 									<!-- Post -->
 										<article class="box post">
+											<div class="js-show-on-scroll">
 											<header>
 												<h2><a href="#">We are located in the French Alps, between France, Italy and Switzerland.</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="alps" style="border-radius: 2%"/></a>
 											<h3>Our clients include individuals, businesses, broadcasting & media production companies.</h3>
 											<p></p>
+											</div>
 										</article>
 								</div>									
 						</div>
