--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<script>
 		/* Configure this in Tailwind.config.js */
 
 		@keyframes fadeIn {
@@ -21,6 +22,7 @@
 		.animate-fadeIn {
   			animation: fadeIn 1s ease-in forwards;
 		}
+		</script>
 		
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
