--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<script>
+		<SCRIPT LANGUAGE="JavaScript">
 		/* Configure this in Tailwind.config.js */
 
 		@keyframes fadeIn {
