--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -50,7 +50,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><div class="multi-button"><button class="cut">HOME</button></li>
+									<div class="multi-button"><button class="cut">HOME</button>
 								</ul>
 							</nav>
 
