--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -50,7 +50,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<div class="multi-button"><button class="cut">HOME</button>
+									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
 								</ul>
 							</nav>
 
