--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
 		function disableselect(e){ 
@@ -86,7 +87,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="js-show-on-scroll">
+										<div class="fade">
 										<header>
 											<h3>Translation</h3>
 										</header>
