--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 								<!-- Feature -->
 									<section>
-										<div class="fade">
+										<div class="js-show-on-scroll">
 										<header>
 											<h3>Translation</h3>
 										</header>
